--- a/packages/pos/simulator/view/pos/hardware/Keypad/MP35.html
+++ b/packages/pos/simulator/view/pos/hardware/Keypad/MP35.html
@@ -1,88 +1,40 @@
 <div class="keypad">
   <!-- Column One -->
   <div class="column">
-    <button class="F1" on:mousedown="dispatchKey({ event, keyName: 'help'})">F1</button>
-    <button class="key-1" on:mousedown="dispatchKey({ event, keyName: '1'})">1</button>
-    <button class="key-4" on:mousedown="dispatchKey({ event, keyName: '4'})">4</button>
-    <button class="key-7" on:mousedown="dispatchKey({ event, keyName: '7'})">7</button>
-    <button class="key-up" on:mousedown="dispatchKey({ event, keyName: 'keyup'})">&uarr;</button>
+    <button class="F1" on:mousedown="fire('key', { event, keyName: 'help'})">F1</button>
+    <button class="key-1" on:mousedown="fire('key', { event, keyName: '1'})">1</button>
+    <button class="key-4" on:mousedown="fire('key', { event, keyName: '4'})">4</button>
+    <button class="key-7" on:mousedown="fire('key', { event, keyName: '7'})">7</button>
+    <button class="key-up" on:mousedown="fire('key', { event, keyName: 'keyup'})">&uarr;</button>
   </div>
 
   <!-- Column Thow -->
   <div class="column">
-    <button class="F2" on:mousedown="dispatchKey({ event, keyName: 'F24'})">F2</button>
-    <button class="key-2" on:mousedown="dispatchKey({ event, keyName: '2'})">2</button>
-    <button class="key-5" on:mousedown="dispatchKey({ event, keyName: '5'})">5</button>
-    <button class="key-8" on:mousedown="dispatchKey({ event, keyName: '8'})">8</button>
-    <button class="key-0" on:mousedown="dispatchKey({ event, keyName: '0'})">0</button>
+    <button class="F2" on:mousedown="fire('key', { event, keyName: 'F24'})">F2</button>
+    <button class="key-2" on:mousedown="fire('key', { event, keyName: '2'})">2</button>
+    <button class="key-5" on:mousedown="fire('key', { event, keyName: '5'})">5</button>
+    <button class="key-8" on:mousedown="fire('key', { event, keyName: '8'})">8</button>
+    <button class="key-0" on:mousedown="fire('key', { event, keyName: '0'})">0</button>
   </div>
 
   <!-- Column Three -->
   <div class="column">
-    <button class="F3" on:mousedown="dispatchKey({ event, keyName: 'shortcuts'})">F3</button>
-    <button class="key-3" on:mousedown="dispatchKey({ event, keyName: '3'})">3</button>
-    <button class="key-6" on:mousedown="dispatchKey({ event, keyName: '6'})">6</button>
-    <button class="key-9" on:mousedown="dispatchKey({ event, keyName: '9'})">9</button>
-    <button class="key-down" on:mousedown="dispatchKey({ event, keyName: 'keydown'})">&darr;</button>
+    <button class="F3" on:mousedown="fire('key', { event, keyName: 'shortcuts'})">F3</button>
+    <button class="key-3" on:mousedown="fire('key', { event, keyName: '3'})">3</button>
+    <button class="key-6" on:mousedown="fire('key', { event, keyName: '6'})">6</button>
+    <button class="key-9" on:mousedown="fire('key', { event, keyName: '9'})">9</button>
+    <button class="key-down" on:mousedown="fire('key', { event, keyName: 'keydown'})">&darr;</button>
 
   </div>
 
   <!-- Column Four -->
   <div class="column">
-    <button class="power F4" on:mousedown="dispatchKey({ event, keyName: 'F23'})">power</button>
-    <button class="close" on:mousedown="dispatchKey({ event, keyName: 'close'})">close</button>
-    <button class="back" on:mousedown="dispatchKey({ event, keyName: 'back'})">back</button>
-    <button class="enter" on:mousedown="dispatchKey({ event, keyName: 'enter'})">enter</button>
+    <button class="power F4" on:mousedown="fire('key', { event, keyName: 'F23'})">power</button>
+    <button class="close" on:mousedown="fire('key', { event, keyName: 'close'})">close</button>
+    <button class="back" on:mousedown="fire('key', { event, keyName: 'back'})">back</button>
+    <button class="enter" on:mousedown="fire('key', { event, keyName: 'enter'})">enter</button>
   </div>
 </div>
-
-<script>
-  import Keyboard from '@mamba/keyboard/api/keyboard.js';
-
-  const getKeyboardEvent = (event, code, keyName) =>
-    new KeyboardEvent(event, {
-      bubbles: true,
-      cancelable: true,
-      key: keyName,
-      charCode: code,
-      keyCode: code,
-      which: code,
-    });
-
-  export default {
-    methods: {
-      dispatchKey({ event, keyName }) {
-        /** Prevent the button from being focused */
-        event.preventDefault();
-        event.stopImmediatePropagation();
-        const el = document.activeElement;
-        const isInputOnFocus = el && (el.tagName === 'INPUT' || el.tagName === 'TEXTAREA');
-        const keyCode = Keyboard.getKeyCode(keyName);
-
-        /** We have to handle input actions manually */
-        if (isInputOnFocus) {
-          /** If action button clicked */
-          if (Keyboard.isActionKey(keyCode)) {
-            /** The actual 'back' is handled by that 'handleKeyUp' method */
-            if (keyName === 'back') {
-              el.value = el.value.slice(0, -1);
-            }
-            /** If numeric button clicked */
-          } else if (el.maxLength < 0 || el.value.length + 1 <= el.maxLength) {
-            el.value += keyName;
-          }
-        }
-
-        el.dispatchEvent(getKeyboardEvent('keydown', keyCode, keyName));
-        el.dispatchEvent(getKeyboardEvent('keypress', keyCode, keyName));
-        if (isInputOnFocus) {
-          el.dispatchEvent(getKeyboardEvent('input', keyCode, keyName));
-        }
-        el.dispatchEvent(getKeyboardEvent('keyup', keyCode, keyName));
-      },
-    },
-  };
-</script>
 
 <style type="text/postcss">
   .keypad {
