--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -15,6 +15,7 @@
 
 <script>
   import _kebabCase from 'lodash/fp/kebabCase';
+  import { KEYBOARD } from '@mamba/core';
   import App from '@mamba/pos/api/app.js';
   import Keyboard from '@mamba/keyboard/api/keyboard.js';
   import { getPosModel, Device } from '@mamba/utils/index.js';
@@ -248,15 +249,13 @@
           }
         }
 
-        const keyName = Keyboard.getKeyName(
-          e.code && e.code !== 0 ? e.code : e.charCode || e.which || e.keyCode,
-        );
+        const keyCode = e.code && e.code !== 0 ? e.code : e.charCode || e.which || e.keyCode;
 
         /**
          * Should cancel the native actions for enter/back keys
          * if pressed anywhere but within a editable input
          * */
-        if (keyName === 'back' || keyName === 'enter') {
+        if (keyCode === KEYBOARD.KEY_CODES.BACK || keyCode === KEYBOARD.KEY_CODES.ENTER) {
           if (isEditableInputOnFocus()) {
             return;
           }
@@ -291,7 +290,7 @@
         }
 
         const keyName = Keyboard.getKeyName(keyCode);
-        const shortcutQuery = `[shortcut='${keyName}']`;
+        const shortcutQuery = `[shortcut='${String(keyName).toLowerCase()}']`;
         const tabindexQuery = `[tabindex]`;
 
         // Try focus an element with tabindex first
@@ -316,7 +315,7 @@
          * Close the app if 'close' button clicked,
          * and there's no button with 'shortcut="close"'
          * */
-        if (keyName === 'close') {
+        if (keyCode === KEYBOARD.KEY_CODES.CLOSE) {
           e.preventDefault();
           if (
             !shortcutsEnabled ||
@@ -333,7 +332,7 @@
         }
 
         /** Handles back button */
-        if (keyName === 'back') {
+        if (keyCode === KEYBOARD.KEY_CODES.BACK) {
           /** Guarantees that the 'back' button is enabled and navigable is enabled */
           if (Keyboard.isBackspaceEnabled() && this.get().navigable.back) {
             e.preventDefault();
@@ -375,7 +374,7 @@
           return;
         }
 
-        if (keyName !== 'enter' || document.activeElement !== shortcutEl) {
+        if (keyCode !== KEYBOARD.KEY_CODES.ENTER || document.activeElement !== shortcutEl) {
           dispatchEventOn(shortcutEl);
         }
       },
