--- a/packages/pos/simulator/view/pos/hardware/Keypad/MP35P.html
+++ b/packages/pos/simulator/view/pos/hardware/Keypad/MP35P.html
@@ -1,40 +1,51 @@
 <div class="keypad">
   <!-- Column One -->
   <div class="column">
-    <button class="help" on:mousedown="fire('key', { event, keyName: 'help'})">help</button>
-    <button class="key-1" on:mousedown="fire('key', { event, keyName: '1'})">1</button>
-    <button class="key-4" on:mousedown="fire('key', { event, keyName: '4'})">4</button>
-    <button class="key-7" on:mousedown="fire('key', { event, keyName: '7'})">7</button>
-    <button class="key-up" on:mousedown="fire('key', { event, keyName: 'keyup'})">&#x2303;</button>
+    <button class="help" on:mousedown="fire('key', { event, keyName: KEY.HELP})">help</button>
+    <button class="key-1" on:mousedown="fire('key', { event, keyName: KEY.KEY_1})">1</button>
+    <button class="key-4" on:mousedown="fire('key', { event, keyName: KEY.KEY_4})">4</button>
+    <button class="key-7" on:mousedown="fire('key', { event, keyName: KEY.KEY_7})">7</button>
+    <button class="key-up" on:mousedown="fire('key', { event, keyName: KEY.ARROW_UP})">&#x2303;</button>
   </div>
 
   <!-- Column Thow -->
   <div class="column">
     <button class="camera">Câmera</button>
-    <button class="key-2" on:mousedown="fire('key', { event, keyName: '2'})">2</button>
-    <button class="key-5" on:mousedown="fire('key', { event, keyName: '5'})">5</button>
-    <button class="key-8" on:mousedown="fire('key', { event, keyName: '8'})">8</button>
-    <button class="key-0" on:mousedown="fire('key', { event, keyName: '0'})">0</button>
+    <button class="key-2" on:mousedown="fire('key', { event, keyName: KEY.KEY_2})">2</button>
+    <button class="key-5" on:mousedown="fire('key', { event, keyName: KEY.KEY_5})">5</button>
+    <button class="key-8" on:mousedown="fire('key', { event, keyName: KEY.KEY_8})">8</button>
+    <button class="key-0" on:mousedown="fire('key', { event, keyName: KEY.KEY_0})">0</button>
   </div>
 
   <!-- Column Three -->
   <div class="column">
-    <button class="shortcuts" on:mousedown="fire('key', { event, keyName: 'shortcuts'})">shortcuts</button>
-    <button class="key-3" on:mousedown="fire('key', { event, keyName: '3'})">3</button>
-    <button class="key-6" on:mousedown="fire('key', { event, keyName: '6'})">6</button>
-    <button class="key-9" on:mousedown="fire('key', { event, keyName: '9'})">9</button>
-    <button class="key-down" on:mousedown="fire('key', { event, keyName: 'keydown'})">&#x2304;</button>
+    <button class="shortcuts" on:mousedown="fire('key', { event, keyName: KEY.SHORTCUTS})">shortcuts</button>
+    <button class="key-3" on:mousedown="fire('key', { event, keyName: KEY.KEY_3})">3</button>
+    <button class="key-6" on:mousedown="fire('key', { event, keyName: KEY.KEY_6})">6</button>
+    <button class="key-9" on:mousedown="fire('key', { event, keyName: KEY.KEY_9})">9</button>
+    <button class="key-down" on:mousedown="fire('key', { event, keyName: KEY.ARROW_DOWN})">&#x2304;</button>
 
   </div>
 
   <!-- Column Four -->
   <div class="column">
     <button class="menu">Menu</button>
-    <button class="close" on:mousedown="fire('key', { event, keyName: 'close'})">close</button>
-    <button class="back" on:mousedown="fire('key', { event, keyName: 'back'})">back</button>
-    <button class="enter" on:mousedown="fire('key', { event, keyName: 'enter'})">enter</button>
+    <button class="close" on:mousedown="fire('key', { event, keyName: KEY.CLOSE})">close</button>
+    <button class="back" on:mousedown="fire('key', { event, keyName: KEY.BACK})">back</button>
+    <button class="enter" on:mousedown="fire('key', { event, keyName: KEY.ENTER})">enter</button>
   </div>
 </div>
+
+<script>
+  import { KEYBOARD } from '@mamba/core';
+
+  export default {
+    helpers: {
+      KEY: KEYBOARD.KEY_NAMES,
+    },
+  };
+</script>
+
 
 <style type="text/postcss">
   .keypad {
