refactor: 💡 get input valie from its instance

--- a/packages/components/Input/Input.html
+++ b/packages/components/Input/Input.html
@@ -170,6 +170,8 @@
         if (mask) {
           this.mask();
         }
+
+        this.refs.input.instance = this;
       }
     },
     onupdate({ changed, current }) {
