feat: 🎸 add money input instance referênce for virtual keyboard

--- a/packages/components/Input/Money.html
+++ b/packages/components/Input/Money.html
@@ -73,6 +73,8 @@
           });
         }
       }
+
+      this.refs.amountInput.refs.input.instance = this;
     },
     methods: {
       validate() {
