feat: 🎸 create suggestion box impl

--- a/packages/components/Keyboard/Keyboard.html
+++ b/packages/components/Keyboard/Keyboard.html
@@ -4,6 +4,7 @@
   import './css/KeyboardThemeMath.css';
   import './css/KeyboardThemeNumeric.css';
   import './css/KeyboardThemePhone.css';
+  import './css/KeyboardSuggestions.css';
 
   let keyboard = null;
 
