feat: 🎸 force reload on POS change

--- a/packages/pos/simulator/view/pos/panels/POS.html
+++ b/packages/pos/simulator/view/pos/panels/POS.html
@@ -66,6 +66,7 @@
     methods: {
       setPosModel(model) {
         this.store.setPosModel(model);
+        window.location.reload();
       },
       updateCapabilities() {
         setTimeout(() => {
