--- a/packages/styles/src/includes/desktop/base.pcss
+++ b/packages/styles/src/includes/desktop/base.pcss
@@ -25,7 +25,7 @@ abbr {
 
 code,
 kbd {
-  font-family: 'SFMono-Medium', 'SF Mono', 'Segoe UI Mono', 'Roboto Mono',
+  font-family: 'Fira Code', 'SFMono-Medium', 'SF Mono', 'Segoe UI Mono', 'Roboto Mono',
     'Ubuntu Mono', 'Menlo', 'Courier', monospace;
   user-select: auto;
 }
