--- a/packages/pos/simulator/view/pos/apps/Launcher.html
+++ b/packages/pos/simulator/view/pos/apps/Launcher.html
@@ -188,6 +188,10 @@
     }
   }
 
+  :global(.force-remove-simulator-pos .mamba-app-container) {
+    overflow: auto;
+  }
+
   .launcher {
     height: 100%;
     overflow: auto;
