--- a/packages/components/Flatlist/NavBar.html
+++ b/packages/components/Flatlist/NavBar.html
@@ -1,18 +1,19 @@
 <div class="mb-navbar" ref:navbarDom>
-  <div class="keydown" on:click="onKeyPress({ keyCode: ARROW_DOWN })" >
-    <Icon symbol="chevron-down" size="large" />
-    <p>{labelDown}</p>
+  <div class="keyup" class:disabled="keyUpDisabled" on:click="onKeyPress({ keyCode: ARROW_UP })" >
+    <Icon color={keyUpDisabled ? neutral400 : neutral700} symbol="chevron-up" size="large" />
+    <p>{labelUp}</p>
   </div>
 
-  <div class="keyup" on:click="onKeyPress({ keyCode: ARROW_UP })" >
-    <Icon symbol="chevron-up" size="large" />
-    <p>{labelUp}</p>
+  <div class="keydown" class:disabled="keyDownDisabled" on:click="onKeyPress({ keyCode: ARROW_DOWN })" >
+    <Icon color={keyDownDisabled ? neutral400 : neutral700} symbol="chevron-down" size="large" />
+    <p>{labelDown}</p>
   </div>
 
 </div>
 
 <script>
   import { KEYBOARD } from '@mamba/core';
+  import { neutral400, neutral700 } from '@mamba/styles/colors.js';
 
   const { ARROW_UP, ARROW_DOWN } = KEYBOARD;
 
@@ -23,12 +24,24 @@
     helpers: {
       ARROW_UP,
       ARROW_DOWN,
+      neutral400,
+      neutral700,
     },
     data() {
       return {
         labelDown: 'Diminuir',
         labelUp: 'Aumentar',
       };
+    },
+    computed: {
+      keyDownDisabled({ className }) {
+        if (className === 'keyDownDisabled') return true;
+        return false;
+      },
+      keyUpDisabled({ className }) {
+        if (className === 'keyUpDisabled') return true;
+        return false;
+      },
     },
     oncreate() {
       // Fires setup event to "Flatlist" listen and compute the height of navbar
@@ -37,27 +50,19 @@
     },
     methods: {
       onKeyPress({ keyCode }) {
-        switch (keyCode) {
-          case ARROW_DOWN:
-            this.fire('keydown');
-            break;
+        const { keyDownDisabled, keyUpDisabled } = this.get();
 
-          case ARROW_UP:
-            this.fire('keyup');
-            break;
-
-          default:
-            break;
-        }
+        if (keyCode === ARROW_DOWN && !keyDownDisabled) this.fire('keydown');
+        else if (keyCode === ARROW_UP && !keyUpDisabled) this.fire('keyup');
       },
       getBoundingHeight() {
         const { navbarDom } = this.refs;
-        if(navbarDom) {
+        if (navbarDom) {
           const { height } = navbarDom.getBoundingClientRect();
           return height;
         }
         return 0;
-      }
+      },
     },
   };
 </script>
@@ -83,6 +88,12 @@
       color: $neutral900;
       display: inline-block;
       line-height: 36px;
+    }
+
+    &.disabled {
+      p {
+        color: $neutral400;
+      }
     }
   }
 
